Prevent header & asset layout buttons from text wrapping

--- a/src/components/Assets/assets.scss
+++ b/src/components/Assets/assets.scss
@@ -51,6 +51,7 @@
 
 .thumb-layout {
   margin: 10px;
+  white-space: nowrap;
 
   .thumb-layout-button {
     color: #000;
