--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -33,6 +33,7 @@
   text-transform: uppercase;
   padding-left: 1em;
   font-size: 14px;
+  white-space: nowrap;
 }
 
 .header-menu-icon {
